# claude-cortex

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.claude/cortex/ledger/: index.json  merkle.json  reinforcements.json
.claude/cortex/ledger/18/: 18ca1b34a3d2f510.json
.claude/cortex/ledger/29/: 291bc5cfa863d52c.json
.claude/cortex/ledger/4b/: 4bb967f6880b4b1a.json
.claude/cortex/ledger/81/: 8118d08ab7e75c88.json
.claude/cortex/ledger/ad/: adce193a21b237ad.json
.claude/cortex/ledger/blocks/: 1f370311-08e0-4d5a-a53d-d91c57daabad.json  61bf5545-4df4-4a85-b7e9-5b9f2f953d28.json  6972e06a-bc0a-4bb6-8d9c-be94eb0b8d54.json  d40f2130-5d40-402f-9e51-ef123c7434f0.json  fb104b8d-49cc-46ac-bbf1-5f196ccae2ec.json
.github/workflows/: ci.yml  release.yml
agents/: bug-investigator.md  code-implementer.md  falsifier-spec.md  knowledge-retriever.md  outcome-recorder.md  refactorer.md  research-agent.md  task-decomposer.md  test-writer.md  verifier.md
commands/: cortex-dream.md  handoff.md
crates/cortex-active-memory/: Cargo.toml
crates/cortex-active-memory/src/: lib.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: confidence.rs  error.rs  hashing.rs  lib.rs  merkle.rs  models.rs  objects.rs  signing.rs  store.rs  time.rs  v2_compat.rs
crates/cortex-core/tests/: v2_fixtures.rs  v3_native.rs
crates/cortex-dream/: Cargo.toml
crates/cortex-dream/src/: lib.rs  main.rs
crates/cortex-dream/tests/: pipeline.rs
crates/cortex-embeddings/: Cargo.toml
crates/cortex-embeddings/src/: lib.rs
crates/cortex-handoff/: Cargo.toml
crates/cortex-handoff/src/: lib.rs
crates/cortex-hooks/: Cargo.toml
crates/cortex-hooks/src/: lib.rs
crates/cortex-hooks/tests/: hooks.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp/src/: lib.rs  main.rs  paths.rs  server.rs
crates/cortex-mcp/src/tools/: args.rs  impls.rs  mod.rs
crates/cortex-mcp/tests/: spectral.rs  tools.rs
crates/cortex-migrate/: Cargo.toml
crates/cortex-migrate/src/: main.rs
crates/cortex-migrate/tests/: migrate.rs
crates/cortex-monitor/: Cargo.toml
crates/cortex-monitor/src/: lib.rs
crates/cortex-similarity/: Cargo.toml
crates/cortex-similarity/src/: lib.rs
crates/cortex-spectral/: Cargo.toml
crates/cortex-spectral/src/: lib.rs
docs/: v4-plan-of-record.md
hooks/: hooks.json
skills/cortex-orientation/: SKILL.md
skills/handoff-management/: SKILL.md
skills/learning-capture/: SKILL.md
skills/ledger-knowledge/: SKILL.md
tests/fixtures/: README.md
tests/fixtures/cache/: search.db
tests/fixtures/v2_ledger/: identity.json  index.json  merkle.json  reinforcements.json
tests/fixtures/v2_ledger/11/: 119165dfdc5def6e.json
tests/fixtures/v2_ledger/16/: 16ece957a863da97.json
tests/fixtures/v2_ledger/6d/: 6d3ff6f085b139b5.json
tests/fixtures/v2_ledger/blocks/: e58f7d8e-3d37-471d-96b5-1c7a38cb7ca8.json  ea3f642c-cb9d-4563-9dea-a618d425cb59.json
