[package]
name = "cortex-dream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Dreaming pass — embed, build graph, decompose, write active memory + spectrum snapshot (v4)"

[[bin]]
name = "cortex-dream"
path = "src/main.rs"

[dependencies]
cortex-core.workspace = true
cortex-embeddings.workspace = true
cortex-spectral.workspace = true
cortex-active-memory.workspace = true
cortex-monitor.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
