[package]
name = "cortex-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedding generation + content-addressed cache for the cortex spectral layer"

[dependencies]
cortex-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile.workspace = true
