[package]
name = "cortex-similarity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BM25 lexical similarity over cortex learnings — fully self-contained, no external API or model download"

[dependencies]
cortex-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
