[package]
name = "cortex-spectral"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Learning graph + sparse Laplacian + eigendecomposition for v4 spectral retrieval"

[dependencies]
cortex-core.workspace = true
cortex-similarity.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
nalgebra-sparse.workspace = true

[dev-dependencies]
tempfile.workspace = true
